# Database-Manager-GUI

./: .env  .swp  :  :wq  Cargo.toml  README.md  cargo.toml  docker-compose.yaml
src/: .components.rs.swp  \  component.rs  components.rs  database.rs  home.rs  main.rs  message.rs
src/business_components/: .components.rs.swp  .home.rs.swp  components.rs  home.rs  mod.rs
src/components/: mod.rs
src/components/business_components/: component.rs  components.rs  console.rs  database.rs  home.rs  mod.rs  repository.rs  table_info.rs  tables.rs
src/components/business_components/database/: '  console.rs  database.rs  mod.rs  models.rs  repository.rs  schemas.rs
src/components/business_components/tables/: .table_info.rs.swp  mod.rs  table_info.rs  tables.rs  test_utils.rs  utils.rs
src/components/business_components/tables/table_data/: table_data.rs
src/components/business_components/tables/table_data_inserter/: mod.rs  table_data_inserter.rs
src/components/business_components/tables/table_info/: table_info.rs
src/components/ui_components/: component.rs  components.rs  events.rs  home.rs  mod.rs
src/components/ui_components/console/: console.rs  events.rs  mod.rs
src/components/ui_components/home/: events.rs  home.rs  mod.rs  table_info.rs  tables.rs
src/components/ui_components/tables/: .tables.rs.swp  create_table_form.rs  events.rs  foreign_key_dropdown.rs  mod.rs  table_info.rs  tables.rs
src/components/ui_components/tables/table_data/: events.rs  mod.rs  table_data.rs
src/ui_components/: components.rs  home.rs
(+3 files in other folders)
