[package]
name = "crm"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = {version = "0.13.1", features=["tokio"]}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
dotenvy = "0.15"

[profile.dev.package.sqlx-macros]
opt-level = 3
